# telemetry-platform

./: .env.example  README.md  alembic.ini  docker-compose.yml  install_ui.py  pyproject.toml  rate_limiter.py  requirements.txt
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/api/v1/: analytics.py  router.py  telemetry.py
app/core/: exceptions.py  rate_limiter.py  security.py
app/db/: engine.py
app/db/migrations/: env.py
app/db/migrations/versions/: 5a1f9b6ffed5_initial_schema.py  a3e72c9d1f04_add_scenario_enrichment_columns.py  b5f83d2e7c1a_scenarios_column_to_jsonb.py
app/domain/: scenarios.py
app/models/: __init__.py  aggregate.py  fleet.py  telemetry.py  vehicle.py
app/observability/: logging.py  metrics.py
app/repositories/: aggregate.py  base.py  telemetry.py
app/schemas/: analytics.py  telemetry.py
app/services/: analytics.py  cache.py  telemetry.py
app/web/static/css/: app.css  style.css
app/web/static/js/: dashboard.js  telemetry.js
app/web/templates/: base.html  dashboard.html  telemetry_form.html
app/workers/: settings.py
app/workers/tasks/: aggregation.py  anomaly.py
docker/: Dockerfile  nginx.conf
scripts/: benchmark_ingestion.py  partition_manager.py  seed_data.py
tests/: conftest.py
tests/integration/: test_analytics_endpoint.py  test_ingest_endpoint.py  test_scenario_analytics.py
tests/unit/: test_domain_scenarios.py  test_rate_limiter.py  test_telemetry_service.py
